tests/ui/feature-gates/feature-gate-precise-capturing.rs
fn hello() -> impl Sized + use<> {}
//~^ ERROR precise captures on `impl Trait` are experimental

fn main() {}
